--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,40 +1,41 @@
 {
-    "name": "frontend",
-    "version": "0.0.0",
-    "private": true,
-    "description": "Frontend for my insight data engineering project",
-    "repository": "https://github.com/TanakritBenz/insight-data-engin-proj",
-    "scripts": {
-        "start": "node ./bin/www",
-        "monitor": "nodemon app.js",
-        "deploy": "gcloud app deploy app.yaml",
-        "test": "mocha test/index.js -t 30000"
-    },
-    "semistandard": {
-        "globals": [
-            "after",
-            "afterEach",
-            "before",
-            "beforeEach",
-            "describe",
-            "it"
-        ]
-    },
-    "dependencies": {
-        "body-parser": "~1.15.2",
-        "cookie-parser": "~1.4.3",
-        "debug": "~2.2.0",
-        "express": "~4.14.0",
-        "jade": "~1.11.0",
-        "morgan": "~1.7.0",
-        "serve-favicon": "~2.3.0"
-    },
-    "devDependencies": {
-        "mocha": "^3.0.2",
-        "nodejs-repo-tools": "git+https://git@github.com/GoogleCloudPlatform/nodejs-repo-tools.git",
-        "supertest": "^2.0.0"
-    },
-    "engines": {
-        "node": ">=4.3.2"
-    }
+  "name": "frontend",
+  "version": "0.0.0",
+  "private": true,
+  "description": "Frontend for my insight data engineering project",
+  "repository": "https://github.com/TanakritBenz/insight-data-engin-proj",
+  "scripts": {
+    "start": "node ./bin/www",
+    "monitor": "nodemon app.js",
+    "deploy": "gcloud app deploy app.yaml",
+    "test": "mocha test/index.js -t 30000"
+  },
+  "semistandard": {
+    "globals": [
+      "after",
+      "afterEach",
+      "before",
+      "beforeEach",
+      "describe",
+      "it"
+    ]
+  },
+  "dependencies": {
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.14.0",
+    "jade": "~1.11.0",
+    "moment": "^2.17.1",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.0.2",
+    "nodejs-repo-tools": "git+https://git@github.com/GoogleCloudPlatform/nodejs-repo-tools.git",
+    "supertest": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=4.3.2"
+  }
 }
